Updated tests, swagger.yml
